--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
     "axios": "^0.21.1",
+    "express": "^4.17.1",
+    "json-server": "^0.16.3",
+    "netlify-lambda": "^2.0.14",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
@@ -20,6 +23,7 @@
     "react-scripts": "4.0.3",
     "react-transition-group": "^4.4.2",
     "redux": "^4.1.0",
+    "serverless-http": "^2.7.0",
     "styled-components": "^5.3.0",
     "typescript": "^4.3.4",
     "uuid": "^8.3.2",
@@ -29,7 +33,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lambda": "netlify-lambda serve src"
   },
   "eslintConfig": {
     "extends": [
