--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.1",
     "express": "^4.17.1",
     "json-server": "^0.16.3",
+    "mongoose": "^5.13.7",
     "netlify-lambda": "^2.0.14",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -34,7 +35,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lambda": "netlify-lambda serve src"
+    "lambda": "netlify-lambda serve server"
   },
   "eslintConfig": {
     "extends": [
