--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-spinners": "^0.11.0",
     "react-transition-group": "^4.4.2",
     "redux": "^4.1.0",
     "serverless-http": "^2.7.0",
