--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "budgety",
+  "homepage": "https://kriziu.github.io/budgety/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,6 +14,7 @@
     "axios": "^0.21.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "gh-pages": "^3.2.3",
     "json-server": "^0.16.3",
     "mongoose": "^5.13.7",
     "netlify-lambda": "^2.0.14",
@@ -38,7 +40,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lambda": "netlify-lambda serve server",
-    "lambda:build": "netlify-lambda build server"
+    "lambda:build": "netlify-lambda build server",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
