small fix to api
now deleting budget deletes all transactions associated with that budget in database

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "api.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:backend": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
