--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "axios": "^0.21.1",
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
+    "react-calendar": "^3.4.0",
+    "react-date-picker": "^8.3.2",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
     "react-icons": "^4.2.0",
