udpated ux in currency selector

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-select": "^4.3.1",
     "react-spinners": "^0.11.0",
     "react-transition-group": "^4.4.2",
     "redux": "^4.1.0",
@@ -59,6 +60,7 @@
   "devDependencies": {
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
+    "@types/react-select": "^4.0.17",
     "@types/react-transition-group": "^4.4.1",
     "@types/styled-components": "^5.1.10",
     "@types/uuid": "^8.3.1",
